Changes for 3.2.11rc1

New features:

Bug fixes:
........S. [ZBX-12975] fixed possibility of foreign key constraint failure due to events being removed before trigger data storage period expires (vso)
........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
........S. [ZBX-12800] fixed incorrect trigger dependency calculation when processing dependent triggers in the same history syncer batch (wiper)
.......P.. [ZBX-12117] fixed proxy passing zeros to history export modules instead of actual numeric values (gleb)
..F....... [ZBX-12856] fixed wrong default value for host filter when adding dependent trigger in trigger edit form (gcalenko)
..F....... [ZBX-12082] fixed possibility to select triggers with same name in multiselect (Ivo)
..F....... [ZBX-11051] fixed displaying highest severity when dashboard filter options contain unacknowledged only (Ivo)

--------------------------------------------------------------------------------
Changes for 3.2.10

3.2.10rc1 was released as 3.2.10 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.10rc1

New features:
..F....... [ZBXNEXT-1421] added service sorting by name if multiple services has same 'sortorder' value (miks)
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes:
..F....... [DEV-593] fixed multiple security issues (miks)
........S. [ZBX-11658] fixed error message in case no items were found for aggregated check (gleb)
.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLevel=4 (gleb)
...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
..F....... [ZBX-6669] fixed use of current host as filter when selecting items for graph forms and trigger forms (gcalenko)