@@ -3,6 +3,7 @@ Changes for 3.2.11rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12130] fixed max length validation in textarea fields (Ivo)
 ........S. [ZBX-12975] fixed possibility of foreign key constraint failure due to events being removed before trigger data storage period expires (vso)
 ........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
 ........S. [ZBX-12800] fixed incorrect trigger dependency calculation when processing dependent triggers in the same history syncer batch (wiper)
@@ -561,6 +562,7 @@ Changes for 3.0.14rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12130] fixed max length validation in textarea fields (Ivo)
 ........S. [ZBX-8049] fixed zabbix[java,,ping] to stay supported when java gateway is down (valdis)
 ........S. [ZBX-12971] fixed possibility of host availability being stuck in unknown state when monitoring though proxy (vso)
 A.F....... [ZBX-12655] added filter on event details page to show messages sent to users only from same groups (gcalenko)
